# PlateNet

./: Makefile  Makefile.config  README.md
Test/: CMakeLists.txt
Test/Demo/: test_pipeline.cpp
Test/include/: CvxText.h  FastDeskew.h  Pipeline.h  PlateRecognizer.h  Plate_Detect.h
Test/models/: SegmentationFree.prototxt
Test/src/: FastDeskew.cpp  Pipeline.cpp  PlateRecognizer.cpp  Plate_Detect.cpp
docker/standalone/gpu/: Dockerfile
python/: requirements.txt
src/caffe/layers/: prior_box_layer.cpp
test/: Detect.py  detection.py  recognition.py
test/model/: deploy.prototxt  plr_iter_40000.caffemodel
